syntax = "proto3";
package vire.utility;

import "vire/utility/BasePayload.proto";

message BaseError {

  BasePayload _base = 1; // Base class

  // reserved 1-99

  sint32 code           = 100; // Error code
  string message_format = 101; // Error message format

}